# santorini-ai

./: Cargo.toml  README.md
benches/: benchmarks.rs
src/: lib.rs  main.rs  santorini.rs
src/mcts/: mod.rs  node.rs  santorini.rs  tree_policy.rs
src/player/: heuristic_ai.rs  human.rs  mcts_ai.rs  mod.rs  random_ai.rs
src/ui/: app.rs  board.rs  bounds.rs  menu.rs  mod.rs
