[package]
name = "santorini-ai"
version = "0.1.0"
authors = ["Joshua Brot <jbrot@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
cached = "0.21"
derive_more = "0.99.0"
rand = { version = "0.7", features = [ "small_rng" ] }
tui = "0.13"
termion = "1.5"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
